new challenge complete.

--- a/color-fliper.html
+++ b/color-fliper.html
@@ -9,11 +9,24 @@
 </head>
 
 <body>
+    <section class="section-container">
+        <div class="navbar">
+            <h1 class="h1-navbar">Color Fliper</h1>
+            <ul class="nav-links">
+                <li><a href="">Sipmle</a></li>
+                <li><a href="">Hex</a></li>
+            </ul>
+        </div>
+        <div class="container">
 
-    <div>
-        
-    </div>
+            <h1 class="header">Background Color: </h1>
+            <button class="btn" type="button">Click Me</button>
 
+
+        </div>
+
+
+    </section>
 
     <script src="color-fliper.js"></script>
 </body>
